# marketplace

./: README.md  docker-compose.yml  pyproject.toml
config/: .env.template
docker/: docker-compose.prod.yml
docker/caddy/: Caddyfile
docker/django/: Dockerfile  gunicorn.sh
docker/nginx/: Dockerfile  my_nginx.conf  nginx.conf
docker/nginx/templates/: default.nginx.conf
main/: asgi.py  wsgi.py
main/settings/: __init__.py
main/settings/components/: common.py
main/settings/environments/: development.py  production.py
