[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = ""
authors = ["Dmitriy Logvinov <dmiitry.logvinov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"
Django = "^4.0.6"
mypy = "^0.961"
python-decouple = "^3.6"
install = "^1.3.5"
django-split-settings = "^1.1.0"
nplusone = "^1.0.0"
structlog = "^21.5.0"
django-axes = "^5.36.0"
django-health-check = "^3.16.5"
django-debug-toolbar = "^3.5.0"
django-migration-linter = "^4.1.0"
django-test-migrations = "^1.2.0"
django-extra-checks = "^0.11.0"
psycopg2 = "^2.9.3"
django-querycount = "^0.7.0"
django-http-referrer-policy = "^1.1.1"
django-permissions-policy = "^4.12.0"
django-csp = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
