[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Dmitriy Logvinov <dmiitry.logvinov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"

Django = "^4.0.6"
django-csp = "^3.7"
django-axes = "^5.36.0"
django-health-check = "^3.16.5"
django-split-settings = "^1.1.0"
django-migration-linter = "^4.1.0"
django-permissions-policy = "^4.12.0"
django-http-referrer-policy = "^1.1.1"

python-decouple = "^3.6"
structlog = "^21.5.0"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.5.0"
django-querycount = "^0.7.0"
django-extra-checks = "^0.11.0"
django-test-migrations = "^1.2.0"
nplusone = "^1.0.0"

pytest = "^7.1.2"
pytest-django = "^4.5.2"

mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
